# discord-bot

./: .env.example  .gitignore  pyproject.toml  railway.json
.gsd/: DECISIONS.md
.gsd/milestones/M001/slices/S01/: S01-PLAN.md
.gsd/milestones/M001/slices/S02/: S02-PLAN.md
.gsd/milestones/M001/slices/S03/: S03-PLAN.md
.gsd/milestones/M001/slices/S04/: S04-PLAN.md  S04-RESEARCH.md
.gsd/milestones/M001/slices/S05/: S05-PLAN.md
.gsd/milestones/M001/slices/S06/: S06-PLAN.md
.gsd/milestones/M002/slices/S01/: S01-PLAN.md
.gsd/milestones/M002/slices/S02/: S02-PLAN.md  S02-RESEARCH.md
.gsd/milestones/M002/slices/S03/: S03-PLAN.md
.gsd/quick/2-make-sure-that-every-feature-works-and-t/: 2-SUMMARY.md
bot/: __main__.py  bot.py  claude.py  config.py  database.py  github_client.py  models.py  oauth.py  webhook.py
bot/cogs/: ai.py  assistant.py  auth.py  github.py  github_auth.py  help.py  ping.py  server_design.py  twitter.py  verification.py
discord_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: DEPLOY.md
migrations/: 001_initial.sql  002_ai_channel.sql  003_channel_repos.sql  003_oauth_tokens.sql  005_github_tokens.sql  006_twitter_feeds.sql
scripts/: verify-deploy.sh
tests/: conftest.py  test_ai_cog.py  test_assistant.py  test_auth_cog.py  test_bot.py  test_claude.py  test_claude_oauth.py  test_config.py  test_database.py  test_github_auth_cog.py  test_github_client.py  test_github_cog.py  test_help_cog.py  test_models.py  test_oauth.py  test_ping.py  test_server_design.py  test_twitter.py  test_verification.py  test_webhook.py
(+24 files in other folders)
